layout of landing page complete, including tablet/desktop breakpoint at 800px

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <head>
     <title>James Basile Landing Page</title>
 
-
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
-
 </head>
 
 
@@ -24,14 +22,14 @@
 
                 <!---->
                 <div class="header-left">
-                    <img class="logo" src="img/guidrLogo.png" alt="LOGO">
+                    <img class="logo" src="img/logo_white.png" alt="LOGO">
                 </div>
                 <div class="header-right">
 
-                    <button>Log In</button>
+                    <button class='sign-in'>Sign In</button>
 
 
-                    <button>Sign Up</button>
+                    <button class='sign-up'>Sign Up</button>
 
                 </div>
 
@@ -40,8 +38,17 @@
         </header>
         <!--IMAGE BELOW HEADER-->
         <section class="header-img">
-            <p>Purple Header Image</p>
+            <img src="img/outdoor.png" alt="Header Image">
         </section>
+
+        <div class="carousel">
+                <div class="left-button"><</div>
+                <img src="#" />
+                <img src="#" />
+                <img src="#" />
+                <img src="#" />
+                <div class="right-button">></div>
+              </div> 
 
         <section class="body-content">
             <!--Content Box 1-->
@@ -83,26 +90,27 @@
                 </div>
             </div>
             </div>
-            <!--FOOTER-->
-            <footer>
-                <div class="footer-content">
-                    <nav>
-                        <a href="#">Log In</a>
-                        <a href="#">Sign Up</a>
-                        <a href="#">Contact Us</a>
-                        <a href="#">Meet the Team</a>
-                    </nav>
-
-                    <div class="copyright">
-                        <h3>© 2019 Guidr</h3>
-                    </div>
-
-                </div>
-
-            </footer>
         </section>
 
     </section>
+    <!--FOOTER-->
+    <footer>
+        <div class="footer-content">
+            <nav>
+                <a href="#">Log In</a>
+                <a href="#">Sign Up</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Meet the Team</a>
+            </nav>
+
+            <div class="copyright">
+                <h3>© 2019 Guidr</h3>
+            </div>
+
+        </div>
+
+    </footer>
+    
 </body>
 
 </html>
