testing CSS error again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>James Basile Landing Page</title>
 
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="./CSS/index.css" rel="stylesheet">
 
     <script src='./JS/main.js' async></script>
 </head>
