desktop mobile, and tablet complete for 'meet the team' page, still needs some styling

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -58,103 +58,112 @@
             <h1>Meet the <span>guidr</span> Team!</h1>
 
             <div class="meet-box">
+                <div class="scrum-UX-box">
+                    <div class="scrum-UX-content">
+                        <h2>Scrum Master</h2>
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Adam Reid Photo">
+                        </div>
+                        <h4>Adam Reid</h4>
 
-                <div class="scrum-UX-content">
-                    <h2>Scrum Master</h2>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Adam Reid Photo">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempore. Incidunt
+                            accusantium,
+                            doloribus dolore reiciendis dolor harum in nihil quod, natus maiores
+                            alias omnis atque rerum. Sit, est nemo? Quos!</p>
                     </div>
-                    <h4>Adam Reid</h4>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempore. Incidunt accusantium,
-                        doloribus dolore reiciendis dolor harum in nihil quod, natus maiores
-                        alias omnis atque rerum. Sit, est nemo? Quos!</p>
-                </div>
+                    <div class="scrum-UX-content">
+                        <h2>UX Designer</h2>
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="OLU Durojaiye Photo">
+                        </div>
+                        <h4>OLU Durojaiye</h4>
 
-                <div class="scrum-UX-content">
-                    <h2>UX Designer</h2>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="OLU Durojaiye Photo">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia possimus libero,
+                            perferendis
+                            expedita fugiat vero atque dolore quos ad recusandae! Fuga architecto
+                            cumque qui assumenda quo possimus nam eaque alias.</p>
                     </div>
-                    <h4>OLU Durojaiye</h4>
-
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia possimus libero, perferendis
-                        expedita fugiat vero atque dolore quos ad recusandae! Fuga architecto
-                        cumque qui assumenda quo possimus nam eaque alias.</p>
                 </div>
             </div>
 
             <div class="meet-box">
 
                 <h2>User Interface Developers</h2>
+                <div class="UI-box">
+                    <div class="UI-content">
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Daniel Starling Photo">
+                        </div>
+                        <h4>Daniel Starling</h4>
 
-                <div class="UI-content">
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Daniel Starling Photo">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <h4>Daniel Starling</h4>
 
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
-                </div>
+                    <div class="UI-content">
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="James Basile Photo">
+                        </div>
+                        <h4>James Basile</h4>
 
-                <div class="UI-content">
-                    <h4>James Basile</h4>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="James Basile Photo">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
-                </div>
 
-                <div class="UI-content">
-                    <h4>Will Shulz</h4>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                    <div class="UI-content">
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                        </div>
+                        <h4>Will Shulz</h4>
+
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
                 </div>
             </div>
             </div>
 
             <div class="meet-box">
                 <h2>Front End Developers</h2>
-
-                <div class="front-content">
-                    <h4>David Flack</h4>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                <div class="front-box">
+                    <div class="front-content">
+                        <h4>David Flack</h4>
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Will Schulz Photo">
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
-                </div>
 
-                <div class="front-content">
-                    <h4>Daniel Weinman</h4>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Daniel Weinman Photo">
+                    <div class="front-content">
+                        <h4>Daniel Weinman</h4>
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Daniel Weinman Photo">
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
                 </div>
             </div>
 
             <div class="meet-box">
-                <h2>Back End Developer</h2>
-                <div class="back-content">
-                    <h4>Holden Bucher</h4>
-                    <div class="meet-img">
-                        <img src="img/randomperson.jpg" alt="Holden Bucher Photo">
+                <div class="back-box">
+                    <h2>Back End Developer</h2>
+                    <div class="back-content">
+                        <h4>Holden Bucher</h4>
+                        <div class="meet-img">
+                            <img src="img/randomperson.jpg" alt="Holden Bucher Photo">
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
+                            adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
+                            suscipit! Similique, at nam.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
-                        adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
-                        suscipit! Similique, at nam.</p>
                 </div>
             </div>
 
@@ -168,7 +177,7 @@
     <footer>
         <div class="footer-content">
             <nav>
-                <a href="#1">Features</a>
+                <a href="index.html">Home</a>
                 <a href="#">Meet the Team</a>
                 <a href="#">Log in</a>
                 <a href="#">Sign Up</a>
