layout of both pages complete for all devices, removed element structure borders

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="footer-content">
             <nav>
                 <a href="#1">Features</a>
-                <a href="#">Meet the Team</a>
+                <a href="meet-the-team.html">Meet the Team</a>
                 <a href="#">Log in</a>
                 <a href="#">Sign Up</a>
             </nav>
