added anchor tags for each team member's github and linkedin on team page

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -8,6 +8,7 @@
 <head>
     <title>James Basile Landing Page</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link href="./CSS/index.css" rel="stylesheet">
 
@@ -29,7 +30,7 @@
                     <div class="dropdown-button">Menu&#9660</div>
                     <div class="dropdown-content dropdown-hidden">
                         <a href="index.html" class="dropdown-link">Home</a>
-                        <a href="meet-the-team.html" class="dropdown-link">Meet the Team</a>
+                        <a href="#5" class="dropdown-link">Meet the Team</a>
                         <a href="#" class="dropdown-link">Log In</a>
                         <a href="#" class="dropdown-link">Sign Up</a>
                     </div>
@@ -55,7 +56,7 @@
 
         <section class="body-content-meet">
 
-            <h1>Meet the <span>guidr</span> Team!</h1>
+            <h1 id='5'>Meet the <span>guidr</span> Team!</h1>
 
             <div class="meet-box">
                 <div class="scrum-UX-box">
@@ -70,6 +71,11 @@
                             accusantium,
                             doloribus dolore reiciendis dolor harum in nihil quod, natus maiores
                             alias omnis atque rerum. Sit, est nemo? Quos!</p>
+
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
 
                     <div class="scrum-UX-content">
@@ -83,6 +89,11 @@
                             perferendis
                             expedita fugiat vero atque dolore quos ad recusandae! Fuga architecto
                             cumque qui assumenda quo possimus nam eaque alias.</p>
+
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> s' Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -100,6 +111,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
 
                     <div class="UI-content">
@@ -111,6 +126,13 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+
+
+                        <nav class='git-linkdin-nav'>
+                            <a href="https://github.com/jbasile6"><i class="fa fa-github-square"></i> James's Github</a>
+                            <a href="https://www.linkedin.com/in/james-basile-72327b109"><i class="fa fa-linkedin"></i>James'
+                                LinkedIn</a>
+                        </nav>
                     </div>
 
                     <div class="UI-content">
@@ -122,6 +144,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -139,6 +165,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
 
                     <div class="front-content">
@@ -150,6 +180,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -166,6 +200,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
+                        <nav class='git-linkdin-nav'>
+                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -181,7 +219,7 @@
         <div class="footer-content">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Meet the Team</a>
+                <a href="#5">Meet the Team</a>
                 <a href="#">Log in</a>
                 <a href="#">Sign Up</a>
             </nav>
