finished styling and layout for both pages, just need to replace placeholder images/text content

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -72,8 +72,9 @@
                             doloribus dolore reiciendis dolor harum in nihil quod, natus maiores
                             alias omnis atque rerum. Sit, est nemo? Quos!</p>
 
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/iAmAdamReid"><i class="fa fa-github-square"></i> Adam's Github</a>
+                            <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
                     </div>
@@ -90,9 +91,10 @@
                             expedita fugiat vero atque dolore quos ad recusandae! Fuga architecto
                             cumque qui assumenda quo possimus nam eaque alias.</p>
 
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> s' Github</a>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/slimbugz"><i class="fa fa-github-square"></i> OLU's Github</a>
+                            <br>
+                            <a href="http://www.linkedin.com/in/oluduro"><i class="fa fa-linkedin"></i> OLU's LinkedIn</a>
                         </nav>
                     </div>
                 </div>
@@ -111,9 +113,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/Dstar4"><i class="fa fa-github-square"></i> Daniel's Github</a>
+                            <br>
+                            <a href="https://www.linkedin.com/in/dstarling/"><i class="fa fa-linkedin"></i> Daniel's LinkedIn</a>
                         </nav>
                     </div>
 
@@ -128,8 +131,9 @@
                             suscipit! Similique, at nam.</p>
 
 
-                        <nav class='git-linkdin-nav'>
+                        <nav class='git-linkedin-nav'>
                             <a href="https://github.com/jbasile6"><i class="fa fa-github-square"></i> James's Github</a>
+                            <br>
                             <a href="https://www.linkedin.com/in/james-basile-72327b109"><i class="fa fa-linkedin"></i>James'
                                 LinkedIn</a>
                         </nav>
@@ -144,8 +148,9 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/kittenman29"><i class="fa fa-github-square"></i> Will's Github</a>
+                            <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
                     </div>
@@ -165,9 +170,10 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
-                            <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/Zooheck"><i class="fa fa-github-square"></i> David's Github</a>
+                            <br>
+                            <a href="https://www.linkedin.com/in/david-f-19178b15a/"><i class="fa fa-linkedin"></i> David's LinkedIn</a>
                         </nav>
                     </div>
 
@@ -180,8 +186,9 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/notontilt09"><i class="fa fa-github-square"></i> Daniel's Github</a>
+                            <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
                     </div>
@@ -200,8 +207,9 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab iusto amet nisi! Et magnam
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
-                        <nav class='git-linkdin-nav'>
-                            <a href="#"><i class="fa fa-github-square"></i> 's Github</a>
+                        <nav class='git-linkedin-nav'>
+                            <a href="https://github.com/holdeelocks"><i class="fa fa-github-square"></i> Holden's Github</a>
+                            <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
                     </div>
