added box-shadow to the text content on home page and to each persons content on meet the team page

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -102,9 +102,10 @@
 
             <div class="meet-box">
 
-                <h2>User Interface Developers</h2>
+
                 <div class="UI-box">
                     <div class="UI-content">
+                        <h2>User Interface Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="Daniel Starling Photo">
                         </div>
@@ -116,11 +117,13 @@
                         <nav class='git-linkedin-nav'>
                             <a href="https://github.com/Dstar4"><i class="fa fa-github-square"></i> Daniel's Github</a>
                             <br>
-                            <a href="https://www.linkedin.com/in/dstarling/"><i class="fa fa-linkedin"></i> Daniel's LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/dstarling/"><i class="fa fa-linkedin"></i> Daniel's
+                                LinkedIn</a>
                         </nav>
                     </div>
 
                     <div class="UI-content">
+                        <h2>User Interface Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="James Basile Photo">
                         </div>
@@ -140,6 +143,7 @@
                     </div>
 
                     <div class="UI-content">
+                        <h2>User Interface Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="Will Schulz Photo">
                         </div>
@@ -159,9 +163,10 @@
             </div>
 
             <div class="meet-box">
-                <h2>Front End Developers</h2>
+
                 <div class="front-box">
                     <div class="front-content">
+                        <h2>Front End Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="Will Schulz Photo">
                         </div>
@@ -173,11 +178,13 @@
                         <nav class='git-linkedin-nav'>
                             <a href="https://github.com/Zooheck"><i class="fa fa-github-square"></i> David's Github</a>
                             <br>
-                            <a href="https://www.linkedin.com/in/david-f-19178b15a/"><i class="fa fa-linkedin"></i> David's LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/david-f-19178b15a/"><i class="fa fa-linkedin"></i>
+                                David's LinkedIn</a>
                         </nav>
                     </div>
 
                     <div class="front-content">
+                        <h2>Front End Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="Daniel Weinman Photo">
                         </div>
@@ -187,7 +194,8 @@
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
                         <nav class='git-linkedin-nav'>
-                            <a href="https://github.com/notontilt09"><i class="fa fa-github-square"></i> Daniel's Github</a>
+                            <a href="https://github.com/notontilt09"><i class="fa fa-github-square"></i> Daniel's
+                                Github</a>
                             <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
@@ -197,8 +205,9 @@
 
             <div class="meet-box">
                 <div class="back-box">
-                    <h2>Back End Developer</h2>
+
                     <div class="back-content">
+                        <h2>Back End Developer</h2>
                         <div class="meet-img">
                             <img src="img/randomperson.jpg" alt="Holden Bucher Photo">
                         </div>
@@ -208,7 +217,8 @@
                             adipisci nemo ullam illum maiores excepturi esse quidem harum iure nam, ea
                             suscipit! Similique, at nam.</p>
                         <nav class='git-linkedin-nav'>
-                            <a href="https://github.com/holdeelocks"><i class="fa fa-github-square"></i> Holden's Github</a>
+                            <a href="https://github.com/holdeelocks"><i class="fa fa-github-square"></i> Holden's
+                                Github</a>
                             <br>
                             <a href="#"><i class="fa fa-linkedin"></i>'s LinkedIn</a>
                         </nav>
